--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -18,6 +18,7 @@
 			<textarea name="blog[body]"><%=blog.body%></textarea>
 		</div>
 		<input class="ui violet basic button big" type="submit">
+		<a href="/blogs/<%=blog._id%>" class="ui violet basic button big">Back</a>
 	</form>
 </div>
 
